[package]
name = "test-juniper"
version = "0.1.0"
authors = ["riendegris <matt@area403.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "0.5"
futures = "0.3.1"
env_logger = "0.8"
log = "0.4.8"
juniper = { version = "0.15.1", default-features = false }
juniper_graphql_ws = { version = "0.2.1", optional = true }
juniper_warp = { version = "0.6.0" }
serde = { version = "1.0.75", features = ["derive"] }
serde_json = "1.0.24"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros", "blocking", "rt-core"] }
warp = "0.2"
